fix: adapt the spoon-javadoc module to Java 11
- pattern matching for instanceof -> explicit casts (InheritanceResolver)
- text blocks -> concatenation, String.formatted() -> String.format()
- record CompletedDoc -> plain class